# courses

./: .gitignore  Cargo.toml  README.md
migrations/: 20241213151916_init.sql
src/: category.rs  config.rs  main.rs  parser.rs  repo.rs  transfer.rs  transfer_service.rs
