[package]
name = "courses-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
log = "0.4"
log4rs = "1.2"
rusqlite = "=0.32.1"
sqlx = { version = "=0.8.1", features = [
    "runtime-tokio",
    "macros",
    "sqlite",
    "chrono",
    "rust_decimal",
    "bigdecimal"
] }

tokio = { version = "1", features = ["full"]}
[profile.release]
debug = true
